dropshot/tests/fail/bad_trait_only2.stderr
error: endpoint handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<Self::Context>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               [body_param: TypedBody<J>,]
               [body_param: UntypedBody,]
               [body_param: StreamingBody,]
               [raw_request: RawRequest,]
           ) -> Result<HttpResponse*, HttpError>
  --> tests/fail/bad_trait_only2.rs:14:7
   |
14 | trait MyApi {
   |       ^^^^^

error: endpoint `bad_endpoint` must accept RequestContext<Self::Context> as its first argument
  --> tests/fail/bad_trait_only2.rs:31:32
   |
31 |         _rqctx: RequestContext<()>,
   |                                ^^

error: endpoint `bad_endpoint2` must accept RequestContext<Self::Context> as its first argument
  --> tests/fail/bad_trait_only2.rs:39:32
   |
39 |         _rqctx: RequestContext<Self::OtherContext>,
   |                                ^^^^^^^^^^^^^^^^^^
